styles/home-styles.css
:root {
  --quote-float-height: -8px;
}

.intro-title {
  transition: 0.3s;
}

.intro-title.reversed {
  background-color: var(--silcrow-900);
}

.intro-title .title-text h2 {
  font-size: 3.375rem;  
  color: var(--paper);
}

.intro-title .title-text h3 {
  color: var(--paper);
  font-size: 1.5rem;
  line-height: 1.4;
  font-style: italic;
}

.intro-title .seal .silcrow-icon {
  --weight: 400;
  --width: 100;
  color: var(--silcrow-300);
  font-size: 142px;
  font-family: Anybody Silcrow Variable;
  font-variation-settings: 'wght' var(--weight), 'wdth' var(--width);
  transition: 1s;
  padding: 20px;
  background-image: var(--ellipse-reverse-svg);
  background-repeat: no-repeat;
  background-size: 100% 100%;
}

.intro-title.collapsed {
  padding: 0;
  opacity: 0;
  height: 50px;
  color: var(--paper);
}

.intro-blurb .squiggle {
  margin-bottom: 20px;
}

.intro-blurb .large-text, figure .large-text {
  font-style: italic;
}

.intro-blurb .intro-text {
  color: var(--silcrow);
  transition: 0.3s;
}

.intro-blurb .intro-text.reversed {
  color: var(--paper);
}

.content-container {
  border-bottom: solid 1px var(--ink-000);  
}

.content-container.translucent {
  opacity: 0.3;
}

.content-item {
  border-top: solid 1px var(--ink-000);
}

.case-study {
  background: linear-gradient(307.09deg, #F9F6FF 0%, rgba(249, 246, 255, 0) 100%);
  overflow: hidden;
}

.case-study small span {
  color: var(--silcrow);
}

.case-study small span::after {
  content: "·";
  margin: 0 10px 0 6px;
  color: var(--asterisk);
}

.case-study .illustration {
  position: relative;
}

.case-study .illustration img {
  transform: scale(90%);
  transform-origin: left;
}

.case-study .illustration::before {
  content: "";
  background-image: url("../images/case-study-illo-bg.png");
  background-size: contain;
  background-repeat: no-repeat;
  position: absolute;
  width: 80vw;
  height: 80vh;
  max-height: 380px;
  top: 0;
  left: 0;
  mix-blend-mode: multiply;
}

.case-study h2 .flush-left, .flush-right {
  display: flex;
}

.case-study h2 .flush-left .text, .flush-right .text {
  flex: none;
}

.case-study h2 .flush-left .squiggle, .flush-right .squiggle {
  margin-top: 0.55em;
}

.case-study h2 .flush-left .squiggle {
  margin-left: 12px;
}

.case-study h2 .flush-right .squiggle {
  margin-right: 12px;
}

.case-study h2 em {
  margin-right: 10px;
}

.case-study h2::after {
  content: "";
  background-color: var(--silcrow);
  -webkit-mask-image: url("../images/icon-arrow-right.svg");
  mask-image: var(--arrow-svg);
  display: inline-block;
  mask-repeat: no-repeat;
  mask-size: auto;
  width: 28px;
  height: 16px;
}

.case-study .illustration, .case-study h2 {
  z-index: 1;
}

figure .quotemark {
  display: grid;
  align-items:center;
}

figure .quotemark picture {
  width: 132px;
  height: auto;
}

figure .quotemark .upper {
  animation: bounce 3s ease-in-out infinite;
}

figure .quotemark .lower {
  margin-top: -44px;
  animation: shrink 3s ease-in-out infinite;
  transform-origin: 50% 50%;
}

@keyframes bounce {
  0% { transform: translateY(0px); }
  50% { transform: translateY(var(--quote-float-height)); }
  100% { transform: translateY(0px); }
}

@keyframes shrink {
  0% { transform: scale(100%); }
  50% { transform: scale(95%); }
  100% { transform: scale(100%); }
}

figure figcaption {
  border-left: 1px solid var(--silcrow);
  padding-left: 15px;
}

.client-list {
  width: 100%;
  overflow: hidden;
  /* background-color: #00ffff20; */
}

.client-list .logo-grid-container {
  position: relative;
  top: 50%;
  left: 50%;
  display: flex;
  flex-direction: column;
  gap: 16px;
  transform: translate(-50%, -50%);
  width: 100vw;
  max-width: 500px;
  align-items: center;
  /* background-color: #00ffff20; */
}

.client-list .logo-grid-container .client-logo-row {
  display: flex;
  flex-direction: row;
  position: relative;
  gap: 16px;
  width: max-content;
  transition: 0.1s;
  /* background-color: #00ffff20; */
}

.client-list .logo-grid-container .client-logo-row img {
  padding: 20px;
  height: 112px;
  flex: none;
  flex-grow: 0;
  background-image: var(--ellipse-reverse-svg);
  background-repeat: no-repeat;
  background-size: 100% 100%;
}

.responsible {
  position: relative;
}

.responsible::after, .responsible::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
  
.responsible::after {
  background: linear-gradient(115deg, rgba(232, 255, 243, 0.4) -0.3%, rgba(232, 255, 243, 0.9) 84.85%);
  z-index: -1;
}

.responsible::before {
  opacity: 0.5;
  background-image: url("../images/bg-tile-responsible.svg");
  background-attachment: fixed;
  background-size: 300px 300px;
  z-index: -2;
}

.responsible .stamp {
  position: relative;
}

.responsible .stamp::after {
  content: "";
  background-color: var(--dagger);
  -webkit-mask-image: url("../images/badge-diligent.svg");
  mask-image: url("../images/badge-diligent.svg");
  display: inline-block;
  mask-repeat: no-repeat;
  mask-size: auto;
  width: 152px;
  height: 123px;
  position: absolute;
  bottom: 0;
  right:0;
  transform: translateY(70%);
}

.responsible p a {
  background-image: linear-gradient(to right, var(--r-underline) 0%, var(--r-underline) 200%);
}

.respnsible p a:hover {
  background-image: linear-gradient(to right, var(--r-underline-hover) 0%, var(--r-underline-hover) 200%);
}

.responsible .signature {
  width: 120px;
  z-index: 1;
}

.responsible .squiggle {
  background-color: var(--dagger);
}

footer {
  transition: 0.3s;
}

footer h2 {
  font-family: Lyon Text;
}

footer .caret {
  content: "";
  background-color: var(--silcrow);
  -webkit-mask-image: url("../images/icon-caret.svg");
  mask-image: var(--caret-svg);
  display: inline-block;
  mask-repeat: no-repeat;
  mask-size: auto;
  width: 9px;
  height: 5px;
  margin-left: 10px;
  margin-bottom: 1px;
  transition: 0.3s ease-in-out;
}

footer .caret.active {
  transform: rotate(-180deg);
}

footer .contact .caret {
  transform: rotate(-90deg);
}

footer .toggle-colophon, footer .contact {
  padding: 20px 0;
}

footer .toggle-colophon {
  cursor: pointer;
}

footer .colophon {
  transition: 0.3s ease-in-out;
  overflow: hidden;
  height: auto;
  padding-top: 20px;
}

footer .colophon.hidden {
  overflow: hidden;
  height: 0px;
  opacity: 0;
  padding-top: 0px;
}

footer .colophon h2 {
  margin-bottom: 18px;
}

footer .colophon .large-text {
  font-size: 1em;
}

footer .colophon .type, footer .colophon .references {
  border-left: 1px solid var(--ink-100);
  margin-bottom: 50px;
  padding-left: 20px;
}

footer .colophon .silcrow-symbol {
  font-family: Anybody Silcrow Variable;
}

footer li {
  display: flex;
  align-content: center;
  align-items: center;
  font-size: 14px;
  padding: 6px 0 4px 0;
}

footer li a {
  margin-bottom: 2px;
  margin-left: -2px;
}

footer li a, footer li .title {
  flex: none; 
}

footer li .line {
  height: 1px;
  width: 100%;
  background-color: var(--ink-100);
  margin: 0 10px;
}

footer li:nth-child(1) {
  padding-top: 4px;
}

footer .details {
  padding-bottom: 30px;
}

footer .carbon {
  border-top: 1px solid var(--ink-100);
  padding-top: 28px;
}

/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* MEDIA QUERIES –––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
/* ——————————————–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */



@media (min-width: 640px) {
  
  footer .colophon .large-text {
    font-size: 1.5em;
  }
  
  footer .colophon li {
    font-size: 1em;
  }
  
  footer .colophon .type, footer .colophon .references, footer .colophon .details {
    border-top: 1px solid var(--ink-100);
    border-left: none;
    padding-left: 0;
    padding-top: 16px;
    /* width: 100%; */
  }

}

@media (min-width: 800px) {
  
  .intro-blurb .intro-text p+p {
    text-indent: 0;
  }
  
  .intro-title .title-text h2 {
    font-size: 5.0625rem;
  }
  
  .responsible .stamp::after {
    width: 200px;
    height: 162px;
  }
  
  .case-study .illustration::before {
    height: 60vh;
    max-height: 470px;
  }
  
}

@media (min-width: 810px) {
  
}

@media (min-width: 900px) {
  
  .intro-title .seal .silcrow-icon {
    font-size: 136px;
  }
  
  .intro-title .title-text h2 {
    font-size: 7.5rem;
    letter-spacing: -0.025em;
  }
  
  .intro-title .title-text h3 {
    line-height: 1;
  }
  
  .intro-arrow {
    display: none;
  }
  
  .intro-blurb .squiggle {
    margin-bottom: 0;
  }
  
  .content-item.left {
    border-right: solid 1px var(--ink-000);
  }
  
  .content-item.right {
    border-left: solid 1px var(--ink-000);
  }
   
  .case-study .illustration::before {
    width: 100%;
    height: 45vw;
  }
  
  .client-list h2 {
    border-top: 1px solid var(--ink-100);
    padding-top: 20px;
  }
  
  footer .carbon {
    border-top: none;
    padding-top: 0;
  }
  
  footer .colophon .large-text {
    font-size: 1rem;
  }
  
  footer .colophon .large-text, footer .colophon ul {
    border-left: none;
    margin-bottom: 0;
    padding-left: 0;
  }
  
  footer li .line {
    margin: 0 20px;
  }
  
}

@media (min-width: 980px) {
  
  .squiggle {
    height: 12px;
  }
  
  .case-study h2::after {
    width: 40px;
    height: 24px;
  }
  
  .responsible .signature {
    width: 156px;
  }
  
  footer .colophon .type h2, footer .colophon .references h2 {
    margin-bottom: 50px;
  }
  
}

@media (min-width: 1194px) {
  
  :root {
    --quote-float-height: -15px;
  }
  
  figure .quotemark picture {
    width: 272px;
  }
  
  figure .quotemark .lower {
    margin-top: -100px;
  }
  
  footer .colophon {
    padding-top: 50px;
  }
  
  footer .colophon .large-text {
    font-size: 1.5rem;
  }
  
  .case-study .illustration::before {
    height: 70vh;
    max-height: 550px;
  }
  
}

@media (min-width: 1248px) {
  
  .client-list .logo-grid-container .client-logo-row img {
    height: 130px;
  }
  
}

@media (min-width: 1920px) {
  
  .intro-title .seal .silcrow-icon {
    font-size: 142px;
  }
  
  .case-study .illustration, .case-study .illustration:before {
    max-width: 700px;
  }
  
  .case-study h2::after {
    margin-bottom: 0.1em;
  }
  
  .responsible .stamp::after {
    width: 270px;
    height: 219px;
    transform: translate(0.7em, 0.9em);
  }
  
  .client-list .logo-grid-container .client-logo-row img {
    height: 160px;
    padding: 30px;
  }
  
  footer .colophon li {
    font-size: 1rem;
  }
  
}

